# noodle

./: .cucumber_stubs.py  .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  azure-pipelines-windows.yml  azure-pipelines.yml  environments.yaml  noodle.yaml  pyproject.toml  secrets.env.example
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot-instructions.original.md
.github/prompts/: install-noodle.prompt.md
.github/workflows/: tests.yml
.squad/: team.md
.squad/identity/: now.md  wisdom.md
.squad/templates/: ralph-triage.js
docs/: NOOD_0115-assertion-locator-gaps-plan.md  NOOD_0156-followup-simple-prompt-performance.md  agent-playbook.md  ai-sdlc-integration.md  architecture.md  benchmark-nood-0131.md  cli-reference.md  codebase-spec.md  design-history.md  encyclopedia.md  external-site-walkthrough.md  feature-packages.md  glossary.md  llm-install.md  llm-performance.md  llm-setup.md  manual.md  mcp-guide.md  native-apps.md  session-diagnostics.md  steps_dictionary.md  woks.md  workspace-guide.md
docs/todo/: secret-broker.md
noodle/: __main__.py  app_lifecycle.py  cli.py  config.py  counters.py  diagnostics.py  doctor.py  healing.py  hooks.py  install_check.py  instruction_budget.py  log.py  payload_budget.py  preconditions.py  rca.py  secrets_akv.py  wok.py
noodle/llm/: client.py  cost.py
noodle/lsp/: server.py
noodle/mcp/: server.py
noodle/orchestrator/: runner.py  script_runner.py  visual_runner.py
noodle/recorder/: recorder.py  sensitives.py
noodle/repl/: core.py  generate.py  goal.py  ground.py  prompt_expander.py  prompts.py  reflect.py  repl.py  step_suggestion_engine.py  validate.py
noodle/reporting/: allure_meta.py  annotate.py  builder.py  evidence.py  junit.py  paths.py  rca_report.py  summary.py  writer.py
noodle/resolver/: __init__.py  desktop_patterns.py  patterns.py  perf_patterns.py  step_resolver.py  step_search_engine.py  visual_patterns.py
noodle/steps/: catch_all.py
sample_feature_tests/: environment.py  pom.yaml
sample_feature_tests/steps/: custom_hooks.py  z_catch_all.py
scripts/: list_features.py
test-apps/busterblock/: package-lock.json  package.json  server.js
test-apps/erp/: README.md  app.py
test-apps/replay-spa/: index.html
unit_tests/: conftest.py  test_agent.py  test_app_path_commands.py  test_assert_compare_messages.py  test_assert_count.py  test_cli_hardening.py  test_cli_step_search.py  test_conditional_steps.py  test_hooks_hardening.py  test_init.py  test_llm_cost.py  test_llm_mode.py  test_llm_openai_endpoint.py  test_locator_ambiguity.py  test_lsp.py  test_mcp_server.py  test_nood_0007.py  test_nood_0008.py  test_nood_0022.py  test_nood_0023.py  test_nood_0025.py  test_nood_0030.py  test_nood_0032.py  test_nood_0035.py  test_nood_0045.py  test_nood_0052.py  test_nood_0062_tables_outline.py  test_nood_0070.py  test_nood_0082.py  test_nood_0088.py  test_nood_0089.py  test_nood_0090.py  test_nood_0094.py  test_nood_0095.py  test_nood_0098.py  test_nood_0100.py  test_nood_0101.py  test_nood_0103.py  test_nood_0104.py  test_nood_0106.py  (+85 more)
unit_tests/woks/: test_wok_registry.py  test_wok_tagging.py
vscode-extension/: .vscodeignore  language-configuration.json  package-lock.json  package.json
vscode-extension/client/: extension.js
vscode-extension/snippets/: noodle.code-snippets
(+174 files in other folders)
