[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noodle"
version = "0.2.0a23"
requires-python = ">=3.11"
dependencies = [
    "behave>=1.2.6",
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.0.0"]
lsp = ["pygls>=1.3.0", "lsprotocol>=2023.0.0"]
reporting = ["allure-python-commons>=2.16.0"]
visual = ["opencv-python>=4.8.0", "pytesseract>=0.3.10", "pyautogui>=0.9.54", "mss>=9.0.1"]
azure = ["azure-identity>=1.15.0", "azure-keyvault-secrets>=4.7.0"]
parallel = ["behavex>=4.0.0"]   # web-only local process parallelism
mobile = ["Appium-Python-Client>=3.0.0"]   # @appium/@android/@ios/@windows/@mac — native apps via Appium (Phase F, NOOD_0032)
desktop = ["pygetwindow>=0.0.9"]           # window focus for the visual agent (Phase G3)
mcp = ["mcp>=1.2.0"]            # noodle-mcp server — AI-SDLC integration (NOOD_0045)
dev = ["pytest>=7.4.0", "ruff>=0.6.0"]   # unit_tests/ — README.md, `make test` / `make lint`
# NOOD_0074: `llm` is deliberately excluded from `all`. `uv pip install`/`pip
# install` resolve+build the whole requested set as one transaction — if any
# one package fails to build, nothing installs, not even unrelated ones.
# `litellm` is the one extra in this list with a real chance of a from-source
# build (a transitive dependency with no prebuilt wheel for some platforms,
# pulling in a Rust toolchain via maturin/puccinialin) — which is exactly what
# fails on networks with TLS-inspecting proxies (see Troubleshooting). Neither
# MCP mode nor no-LLM manual mode need it, so it shouldn't be able to block
# either. Install it explicitly (`.[llm]`) when you actually want
# LiteLLM-backed manual mode.
all = ["pygls>=1.3.0", "lsprotocol>=2023.0.0", "allure-python-commons>=2.16.0", "opencv-python>=4.8.0", "pytesseract>=0.3.10", "pyautogui>=0.9.54", "mss>=9.0.1", "azure-identity>=1.15.0", "azure-keyvault-secrets>=4.7.0", "behavex>=4.0.0", "Appium-Python-Client>=3.0.0", "pygetwindow>=0.0.9", "pytest>=7.4.0", "mcp>=1.2.0", "ruff>=0.6.0"]

[project.scripts]
noodle       = "noodle.cli:app"
noodle-lsp   = "noodle.lsp.server:main"
noodle-mcp   = "noodle.mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]   # codebase predates a line-length convention; not worth reformatting wholesale

[tool.ruff.lint.per-file-ignores]
"sample_feature_tests/environment.py" = ["F401"]   # behave hook re-exports — "unused" imports are the point

[tool.hatch.build.targets.wheel]
packages = ["noodle"]

# NOOD_0027 — bundle the curated step dictionary into the wheel so a real
# `pip install noodle` (not just an editable dev checkout) still has the
# baseline corpus for step-search/suggestion (noodle/resolver/step_resolver.py).
# docs/agent_patterns.yaml is pure staging output, not bundled — it only
# ever belongs to a workspace. NOOD_0147 — the session-diagnostics contract
# rides along too: `noodle diagnostic guide` must work in MCP-blocked
# environments where read_docs isn't reachable.
[tool.hatch.build.targets.wheel.force-include]
"docs/steps_dictionary.md" = "noodle/_docs/steps_dictionary.md"
"docs/session-diagnostics.md" = "noodle/_docs/session-diagnostics.md"
